# ccminer-cpu

./: .gitignore  Makefile.am  Mem_win.cpp  api.cpp  bench.cpp  bignum.hpp  ccminer.cpp  ccminer.sln  ccminer.vcxproj  ccminer.vcxproj.filters  compat.h  confdefs.h  config.json  miner.h  util.cpp
common/: Platform_unix.cpp  Platform_win.cpp
common/config/: CommonConfig.cpp  ConfigLoader.cpp
common/log/: SysLog.cpp
common/net/: Job.h
compat/: stdbool.h
compat/jansson/: jansson_config.h
core/: Config.h
crypto/: cryptonight-cpu.c  cryptonight.cpp  wildkeccak-cpu.cpp  xmr-rpc.cpp
crypto/cpu/: int-util.h
net/: Network.cpp  Network.h
